Phase 2 completed
